@@ -14,6 +14,7 @@ Version 6.7 - not yet released
   - repetitive airspace warning sound (#2952)
   - never close dialogs due to display rotation
   - disable custom fonts on Altair
+  - improve small dialog font on Altair
 * map
   - terrain countour lines (#2451)
   - continue loading terrain/topography without GPS fix (#2723)
